@@ -332,6 +332,22 @@ module Nokogiri
         assert_equal 1, tires.length
       end
 
+      def test_namespace_search_with_css
+        xml = Nokogiri::XML.parse(<<-eoxml)
+<root>
+ <car xmlns:part="http://general-motors.com/">
+  <part:tire>Michelin Model XGV</part:tire>
+ </car>
+ <bicycle xmlns:part="http://schwinn.com/">
+  <part:tire>I'm a bicycle tire!</part:tire>
+ </bicycle>
+</root>
+        eoxml
+
+        tires = xml.css('bike|tire', {'bike' => 'http://schwinn.com/'})
+        assert_equal 1, tires.length
+      end
+
       def test_namespaces
         xml = Nokogiri::XML.parse(<<-EOF)
 <x xmlns:a='http://foo.com/' xmlns:b='http://bar.com/'>
